--- a/NoteSample.ConsoleApp/NoteSample.ConsoleApp.csproj
+++ b/NoteSample.ConsoleApp/NoteSample.ConsoleApp.csproj
@@ -65,6 +65,7 @@
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
